--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,5 +16,12 @@
     Welcome to {{title}}!
   </h1>
   <router-outlet></router-outlet>
+
   <img src="https://cdn.shopify.com/s/files/1/0584/3841/files/e628b30d-ba42-4cba-96c2-b23f774114c8-1_1024x1024.png?2784432892916895677">
 </div>
+
+<footer class="footer">
+  <div class="container">
+    <a class="text-muted" routerLink="admin">Admin</a>
+  </div>
+</footer>
